--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -8,7 +8,7 @@
  
 body{
 	font-family:verdana;
-	background-image: url("../IMG/fondo.png"); 
+	background-image: url("../img/fondo.png"); 
 	background-size:100% 100%; 				
 	background-attachment:fixed; 
 }
