--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -17,12 +17,12 @@ footer{
     background: -moz-linear-gradient(top, #636363 0%, #303030 100%); 
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#636363), color-stop(100%,#303030)); 
 }
-#panel_anuncios{
+#panel{
     margin: auto;
     margin:5%;
 }
 
-#contenido_panel_anuncios{
+#contenido_panel{
     margin: auto;
     margin-top: 2%;
     width:100%; 
@@ -35,3 +35,6 @@ footer{
 #anuncios{
     margin: 5% 5%;
 }
+
+
+
