RQS: Se modifican los estilos.

--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -44,3 +44,17 @@ footer{
 #anuncios{
     margin: 5% 5%;
 }
+
+#registro{
+ width: 50%;
+ margin:auto;
+}
+
+.avatar-seleccionar label{
+    width: 12%; 
+}
+
+.avatar-seleccionar img {
+ width: 100%;   
+    
+}
