--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -48,6 +48,7 @@ footer{
 #registro{
  width: 50%;
  margin:auto;
+ padding:2%;
 }
 
 .avatar-seleccionar label{
@@ -57,4 +58,14 @@ footer{
 .avatar-seleccionar img {
  width: 100%;   
     
+}
+
+#ingreso{
+ margin:auto;
+ width: 50%;
+ padding: 9%;
+}
+
+#ingreso_datos{
+    padding: 2%;  
 }
