--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -39,7 +39,7 @@ footer{
     //background: rgba(0, 0, 0, 0.2);
     //color: rgba(0, 0, 0, 0.2);
     border-radius:2px; 
-    padding:5%;
+
 }
 
 .form-group input{
@@ -77,4 +77,13 @@ footer{
 
 .form-group label{
     width: 45%;
+}
+
+#panel_sugeridos{
+ margin-top: 2%;
+    width:100%; 
+    background-color: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.2);
+    border-radius:2px; 
 }
