RQS: Inicio sesion facebook.

--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -44,9 +44,14 @@ footer{
 
 .form-group input{
 
-    width: 45%;
+    //width: 45%;
 }
 #anuncios{
+    margin: 5% 5%;
+}
+
+#anunciossugeridos{ 
+    width: 60%;
     margin: 5% 5%;
 }
 
