--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -15,9 +15,10 @@ body{
     background-attachment:fixed; 
 }
 
+
 footer{
     margin:0;
-    margin-top: 15px;
+    margin-top: 900px;
     clear: both;
     width:100%;
     height:200px;
@@ -27,9 +28,9 @@ footer{
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#636363), color-stop(100%,#303030)); 
 }
 #panel{
-    margin: auto;
-    width: 80%;
-    padding: 2%;
+    margin:auto;
+    width:80%;
+    padding:2%;
 }
 
 #contenido_panel{
@@ -104,5 +105,27 @@ footer{
 }
 .margen{
     margin: 1%;
+}
+
+#panel_publicar{
+    width: 60%;
+    margin:auto;
+    margin-top: 8%;
+    background-color: rgba(255, 255, 255, 0.9);
+    float:left;
+    border-radius: 10px;
+}
+#panel_publicar_lateral{
+    float: right;
+    /*background-color: blue;*/
+    width: 30%;
+    margin:auto;
+    margin-top: 8%;
+    margin-left:2%;
+}
+
+#img_publicar{
+    width: 60%;
+    margin-left:18%;
 }
 
