--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -18,7 +18,7 @@ body{
 
 footer{
     margin:0;
-    margin-top: 900px;
+    //margin-top: 900px;
     clear: both;
     width:100%;
     height:200px;
@@ -114,6 +114,7 @@ footer{
     background-color: rgba(255, 255, 255, 0.9);
     float:left;
     border-radius: 10px;
+    border: 1px solid #ddd;
 }
 #panel_publicar_lateral{
     float: right;
