--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -10,8 +10,8 @@ and open the template in the editor.
 
 body{
     font-family:verdana;
-    background-image: url("../img/fondo.png"); 
-    background-size:100% 100%; 				
+    background-image: url("../img/BG_1.jpg"); 
+    background-size:100%; 				
     background-attachment:fixed; 
 }
 
@@ -26,6 +26,25 @@ footer{
     background: #636363;
     background: -moz-linear-gradient(top, #636363 0%, #303030 100%); 
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#636363), color-stop(100%,#303030)); 
+}
+
+.contenido{
+    margin: 2%;
+}
+.ajustado-der{
+    margin-right: 2%;
+}
+.alto{
+    height: 120px;
+}
+.top3{
+    margin-top: 120px;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.upright{
+    margin-right: 2%;
+    margin-top: 2%;
 }
 #panel{
     margin:auto;
@@ -97,12 +116,6 @@ footer{
     margin: 10%;
 }
 
-.margen{
-    margin: 1%;
-}
-.ajustado{
-    margin: 10%;
-}
 .margen{
     margin: 1%;
 }
