--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -11,8 +11,8 @@ and open the template in the editor.
 body{
     font-family:verdana;
     background-image: url("../img/fondo.jpg"); 
-    background-size:100%; 				
-    background-attachment:fixed; 
+    background-size:100% 100%; 					/* El background utilizara el 100% del navegador en eje x y eje y */
+    background-attachment:fixed; 	
 }
 
 
