--- a/AnunciosGroup0.3/web/css/Estilos_ag.css
+++ b/AnunciosGroup0.3/web/css/Estilos_ag.css
@@ -17,8 +17,8 @@ body{
 
 
 footer{
-    margin:0;
-  //margin-top:300px;
+
+    margin-top:300px;
     clear: both;
     width:100%;
     height:200px;
